--- a/components/AutoComplete.module.css
+++ b/components/AutoComplete.module.css
@@ -1,9 +1,28 @@
+.wrapper {
+  position: relative;
+}
+
+.input {
+  width: 100%;
+  height: 4rem;
+  font-size: 1.125rem;
+  border: none;
+  padding: var(--input-y-padding) var(--input-x-padding);
+  outline: none;
+}
+
+.input:focus {
+  background-color: var(--purple-3rd);
+}
+
 .autoComplete {
   position: absolute;
-  top: 100%;
+  top: calc(100% - 3px);
   left: 0;
   right: 0;
   background-color: white;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 15px 12px;
 }
 
