--- a/features/auth/AuthForm.module.css
+++ b/features/auth/AuthForm.module.css
@@ -1,5 +1,37 @@
-.userType {
+.accountType {
   margin-bottom: 2rem;
+}
+
+.checkbox label,
+.radio label {
+  margin-bottom: 0;
+}
+
+.checkbox input {
+  width: 21px;
+  height: 21px;
+}
+
+.radio input {
+  width: auto;
+  height: auto;
+  display: none;
+}
+
+.radio label {
+  width: 100%;
+  height: 2.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid var(--orange);
+  cursor: pointer;
+  transition: all 0.1s ease-in-out;
+}
+
+.radio input:checked + label {
+  background-color: var(--orange);
+  color: white;
 }
 
 .actions {
