--- a/features/jobs/JobDate.module.css
+++ b/features/jobs/JobDate.module.css
@@ -1,7 +1,7 @@
 .date {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  /* justify-content: flex-end; */
   gap: 0.3rem;
   font-size: 0.8rem;
 }
