--- a/features/jobs/Search.module.css
+++ b/features/jobs/Search.module.css
@@ -15,12 +15,12 @@
   border-right: 1px solid lightgray;
 }
 
-.controlGroup > *:first-child > div:first-of-type {
+.controlGroup > *:first-child input {
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
 }
 
-.controlGroup > *:last-child > div:first-of-type {
+.controlGroup > *:last-child input {
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
   padding-right: calc(var(--searchBtnWidth) + 10px + 1rem);
