--- a/features/jobs/Search.module.css
+++ b/features/jobs/Search.module.css
@@ -1,5 +1,8 @@
 .searchForm {
   position: relative;
+  background-color: #fff;
+  display: flex;
+  border-radius: 6px;
 }
 
 .controlGroup {
@@ -15,17 +18,6 @@
   border-right: 1px solid lightgray;
 }
 
-.controlGroup > *:first-child input {
-  border-top-left-radius: 4px;
-  border-bottom-left-radius: 4px;
-}
-
-.controlGroup > *:last-child input {
-  border-top-right-radius: 4px;
-  border-bottom-right-radius: 4px;
-  padding-right: calc(var(--searchBtnWidth) + 10px + 1rem);
-}
-
 .searchBtn {
   display: flex;
   align-items: center;
@@ -34,12 +26,8 @@
   color: white;
   border: none;
   border-radius: 4px;
-  position: absolute;
-  top: 50%;
-  right: 10px;
   width: var(--searchBtnWidth);
   height: var(--searchBtnWidth);
-  transform: translateY(-50%);
 }
 
 .error {
